--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "3.3.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
+    "react-burgers": "^1.2.0",
     "react-dom": "^16.8.3",
     "react-player": "^1.9.3",
     "react-router-dom": "4.3.1",
