--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-player": "^1.9.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.0.3",
+    "react-scroll-manager": "^1.0.0",
     "video-react": "^0.13.5"
   },
   "devDependencies": {},
